--- a/web/index.html
+++ b/web/index.html
@@ -1,10 +1,11 @@
 !Doctype html>
 <html>
 	<head>
-		<title>Home Page</title>
+		<title>Home Page </title>
 	</head>
 
 	<body>
+		<h1>Now The Fun Begins</h1>
 		<nav></nav>
 		<header></header>
 		<footer></footer>
